Fix for #33 - That much of z-index should do the trick

--- a/Themes/default/css/LikePosts.css
+++ b/Themes/default/css/LikePosts.css
@@ -5,7 +5,7 @@
 	top: 0;
 	left: 0;
 	background: rgba(0,0,0,0.4);
-	z-index: 101 !important;
+	z-index: 9999;
 }
 
 .like_posts_member_info_box {
@@ -15,7 +15,7 @@
 	bottom: 100px;
 	line-height: 15px;
 	font-size: 13px;
-	z-index: 102;
+	z-index: 9999;
 	border-radius: 5px;
 	box-shadow: -1px 2px 12px rgba(0, 0, 0, 0.9);
 	border: 2px solid #ECEDED;
